# QuiverSQL

./: .editorconfig  .gitattributes  .gitignore  Architecture-review.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  USER_GUIDE.md  VERSION  current_phase_task.md  docker-compose.yml  implementation_plan.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: JSON_RPC_FRAMING.md  SQL_CONNECTOR_TESTING.md  VERSIONING.md
dql-vscode/: package-lock.json  package.json  tsconfig.json
dql-vscode/src/: daemonClient.ts  dataSourcesProvider.ts  extension.ts  lineageProvider.ts  webviewPanel.ts
dql-vscode/src/test/: detectQueries.test.ts
dql-workspace/: Cargo.toml  sample.csv  test.db
dql-workspace/dql-connectors/: Cargo.toml
dql-workspace/dql-connectors/examples/: create_sample_db.rs
dql-workspace/dql-connectors/src/: lib.rs  sqlite.rs
dql-workspace/dql-core/: Cargo.toml
dql-workspace/dql-core/src/: engine.rs  lib.rs  models.rs
dql-workspace/dql-daemon/: Cargo.toml
dql-workspace/dql-daemon/src/: main.rs
dql-workspace/dql-daemon/tests/: federation_tests.rs
qsql-vscode/: .eslintrc.json  eslint.config.mjs  package-lock.json  package.json
qsql-vscode/src/: daemonClient.ts  dataSourcesProvider.ts  extension.ts  lineageProvider.ts  models.ts  planVisualizationPanel.ts  providerIcons.ts  resultPage.ts  sourceManager.ts  webviewPanel.ts
qsql-vscode/src/test/: client.test.ts  detectQueries.test.ts
qsql-workspace/: Cargo.toml
qsql-workspace/qsql-connectors/: Cargo.toml
qsql-workspace/qsql-connectors/examples/: generate_quickstart_samples.rs
qsql-workspace/qsql-connectors/src/: lib.rs  mysql.rs  postgres.rs  sql.rs  sqlite.rs
qsql-workspace/qsql-core/: Cargo.toml
qsql-workspace/qsql-core/src/: broadcast.rs  engine.rs  fixed_width.rs  lib.rs  models.rs  result_ipc.rs  sql_types.rs  table_refs.rs
qsql-workspace/qsql-core/tests/: serde_golden_tests.rs
qsql-workspace/qsql-daemon/: Cargo.toml  build.rs
qsql-workspace/qsql-daemon/benches/: phase0_benchmarks.rs
qsql-workspace/qsql-daemon/src/: explain.rs  lib.rs  main.rs
qsql-workspace/qsql-daemon/tests/: arrow_ipc_tests.rs  broadcast_join_tests.rs  cancellation_rss.rs  explain_analyze_tests.rs  federation_tests.rs  fixed_width_tests.rs  json_rpc_tests.rs  lineage_tests.rs  quickstart_samples_tests.rs  sort_pushdown_tests.rs
qsql-workspace/qsql-daemon/tests/common/: fixtures.rs  memory.rs  mod.rs
samples/quickstart/: README.md  demo.sqlite  departments.ndjson  employees.csv  employees_fwf.layout.json  employees_fwf.txt  orders.parquet  projects.json
