[package]
name = "dql-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
dql-core = { path = "../dql-core" }
datafusion = "44.0.0"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
