[package]
name = "qsql-connectors"
version = "0.1.2-alpha.0"
edition = "2021"

[dependencies]
qsql-core = { path = "../qsql-core" }
datafusion = "44.0.0"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parquet = "53.4.1"
