[package]
name = "qsql-connectors"
version = "0.2.1-alpha.0"
edition = "2021"

[dependencies]
qsql-core = { path = "../qsql-core" }
datafusion = "46.0.1"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
mysql_async = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parquet = "53.4.1"

[features]
default = []
postgres = []
mysql = []
