[package]
name = "qsql-core"
version = "0.2.1-alpha.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
datafusion = "44.0.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
sqlparser = { version = "0.62.0", features = ["visitor"] }

[features]
default = []
postgres = []
mysql = []
