[package]
name = "qsql-daemon"
version = "0.2.1-alpha.0"
edition = "2021"

[dependencies]
qsql-core = { path = "../qsql-core" }
qsql-connectors = { path = "../qsql-connectors" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
datafusion = "44.0.0"
regex = "1.12.3"

[features]
default = []
postgres = ["qsql-connectors/postgres", "qsql-core/postgres"]
mysql = ["qsql-connectors/mysql", "qsql-core/mysql"]

[dev-dependencies]
criterion = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }

[[bench]]
name = "phase0_benchmarks"
harness = false
