[package]
name = "qsql-daemon"
version = "0.3.0-alpha.0"
edition = "2021"

[lib]
name = "qsql_daemon"
path = "src/lib.rs"

[dependencies]
qsql-core = { path = "../qsql-core" }
qsql-connectors = { path = "../qsql-connectors" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
datafusion = "53.1.0"
regex = "1.12.3"
async-trait = "0.1"

[features]
default = []
postgres = ["qsql-connectors/postgres", "qsql-core/postgres"]
mysql = ["qsql-connectors/mysql", "qsql-core/mysql"]

[dev-dependencies]
criterion = "0.5"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
mysql_async = "0.34"
once_cell = "1.19"
memory-stats = "1.2"
sysinfo = { version = "0.30", default-features = false }

[[bench]]
name = "phase0_benchmarks"
harness = false
