[package]
name = "qsql-daemon"
version = "0.3.1-alpha.0"
edition = "2021"

[lib]
name = "qsql_daemon"
path = "src/lib.rs"

[dependencies]
qsql-core = { path = "../qsql-core" }
qsql-connectors = { path = "../qsql-connectors" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
datafusion = "53.1.0"
datafusion-federation = { version = "0.5.3", features = ["sql"] }
regex = "1.12.3"
async-trait = "0.1"

[features]
default = []

[dev-dependencies]
criterion = "0.5"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
mysql_async = "0.34"
once_cell = "1.19"
memory-stats = "1.2"
sysinfo = { version = "0.39", default-features = false }
# Phase 9 — `tests/arrow_ipc_tests.rs` decodes the base64-wrapped Arrow IPC
# payload to assert parity vs the JSON path; same pin as qsql-core's
# production dep so we don't drag in two versions.
base64 = "0.22"

[[bench]]
name = "phase0_benchmarks"
harness = false
